# dash.nvim

./: .gitignore  .gitmodules  .luacheckrc  BACKEND.md  Cargo.toml  Makefile  README.md  test
.githooks/: pre-commit  pre-push
.github/workflows/: gen-docs-txt.yml  lint-check-test.yml
autoload/health/: dash.vim
doc/: dash-nvim.txt  dash.txt
ftdetect/: handlebars.vim
lua/: __dash-dev.lua
lua/dash/: config.lua  constants.lua  health.lua  init.lua  query-builder.lua  startup.lua  utils.lua
lua/dash/providers/: fzf-lua.lua  init.lua  snap.lua  telescope.lua
lua/dash/utils/: config.lua  jobs.lua  strings.lua  tables.lua  telescope.lua  xml.lua
lua/dash/utils/xml/: init.lua
lua/dash/utils/xml2lua/: XmlParser.lua  init.lua
lua/dash/utils/xml2lua/xmlhandler/: tree.lua
lua/telescope/_extensions/: dash.lua
plugin/: dash.vim
scripts/: build-for-architecture.bash  install-for-architecture.bash  install-local.bash
spec/: .luacheckrc  spec.vim
spec/dash/rust/: backend_spec.lua
spec/dash/utils/: strings_spec.lua  tables_spec.lua  xml_spec.lua
spec/dash/utils/xml2lua/: xml2lua_spec.lua
src/: arg_parser.rs  cli_runner.rs  config.rs  constants.rs  dash_app_connector.rs  dash_item.rs  dash_query.rs  lib.rs  main.rs  previews.rs  query_builder.rs  query_runner.rs  search_engine.rs  search_engine_fallback.rs  sqlite_query_runner.rs  url_handler.rs
src/lua_bindings/: dash_config_binding.rs  dash_lua_bindings.rs  dash_nvim_config.rs  dash_query_binding.rs  mod.rs  nvim.rs  url_handler_binding.rs
src_old/: cli_runner.rs  config.rs  constants.rs  query_builder.rs  query_runner.rs
