[package]
name = "dash-nvim"
version = "0.1.0"
authors = ["Mat Jones <mat@mjones.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = {version = "0.6", features = ["luajit", "vendored", "module", "macros"]}
argparse = "0.2.2"
roxmltree = "0.14.1"
regex = "1"
futures = "0.3"
crossbeam = "0.8"
tokio = { version = "1", features = ["full"] }
